backend/hash-out.txt
[eval]:10
    await prisma.();
                 ^
Expected ident

SyntaxError: Unexpected token '('
    at makeContextifyScript (node:internal/vm:194:14)
    at compileScript (node:internal/process/execution:388:10)
    at evalTypeScript (node:internal/process/execution:260:22)
    at node:internal/main/eval_string:71:3

Node.js v24.6.0
